--- a/about.html
+++ b/about.html
@@ -39,17 +39,13 @@
         <!-- Header Start -->
        <div class="header-area">
             <div class="main-header ">
-                <div class="header-top d-none d-lg-block">
-                   <div class="container">
-                   </div>
-                </div>
-               <div class="header-bottom  header-sticky">
+               <div class="header-bottom  header-sticky" style="background-color:darkgray">
                     <div class="container">
                         <div class="row align-items-center">
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
-                                <div class="logo">
-                                    <a href="index.html"><img  style="height: 100px;" src="assets/img/logo/logo1.png" alt=""></a>
+                                <div class="logo" style="background-color:darkgray">
+                                    <a href="index.html"><img  style="height: 100px;" src="assets/img/logo/logo3.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
