--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Business HTML-5 Template </title>
+	<title>CloudKyte Technologies LLC </title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="manifest" href="site.webmanifest">
@@ -37,15 +37,15 @@
 </div>
 <header>
     <!-- Header Start -->
-    <div class="header-area">
+    <div class="header-area" style="background-color:darkgray">
         <div class="main-header ">
-            <div class="header-bottom  header-sticky">
+            <div class="header-bottom  header-sticky" style="background-color:darkgray">
                 <div class="container">
-                    <div class="row align-items-center">
+                    <div class="row align-items-center" style="background-color:darkgray">
                         <!-- Logo -->
-                        <div class="col-xl-2 col-lg-2">
+                        <div class="col-xl-2 col-lg-2" style="background-color:darkgray" >
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo1.png" style="height: 100px;"></a>
+                                <a href="index.html"><img src="assets/img/logo/logo3.png" style="height: 100px;"></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10">
@@ -92,7 +92,7 @@
                         <div class="col-xl-8 col-lg-7 col-md-8">
                             <div class="hero__caption">
                                 <span data-animation="fadeInLeft" data-delay=".1s">Committed to success</span>
-                                <h1 data-animation="fadeInLeft" data-delay=".5s" >We help to transform your business</h1>
+                                <h1 data-animation="fadeInLeft" data-delay=".5s" >Business cloud transformation as a service</h1>
                                 <p data-animation="fadeInLeft" data-delay=".9s">Engage with us to embark on a journey to transform your business to the cloud<br>.</p>
                                 <!-- Hero-btn -->
                                 <div class="hero__btn" data-animation="fadeInLeft" data-delay="1.1s">
@@ -332,8 +332,8 @@
                             <img src="assets/img/gallery/team2.png" alt="">
                         </div>
                         <div class="team-caption">
-                            <h3><a href="#">Ethan Welch</a></h3>
-                            <span>UX Designer</span>
+                            <h3><a href="#">Azim K</a></h3>
+                            <span>CEO</span>
                         </div>
                     </div>
                 </div>
@@ -343,8 +343,8 @@
                             <img src="assets/img/gallery/team3.png" alt="">
                         </div>
                         <div class="team-caption">
-                            <h3><a href="#">Ethan Welch</a></h3>
-                            <span>UX Designer</span>
+                            <h3><a href="#">Atif Rumani</a></h3>
+                            <span>CTO</span>
                         </div>
                     </div>
                 </div>
@@ -354,8 +354,8 @@
                             <img src="assets/img/gallery/team1.png" alt="">
                         </div>
                         <div class="team-caption">
-                            <h3><a href="#">Ethan Welch</a></h3>
-                            <span>UX Designer</span>
+                            <h3><a href="#">Shahnawaz Nabi</a></h3>
+                            <span>Marketing</span>
                         </div>
                     </div>
                 </div>
