modified:   index.html

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     <div class="row">
                         <div class="col-xl-8 col-lg-7 col-md-8">
                             <div class="hero__caption">
-                                <span data-animation="fadeInLeft" data-delay=".1s">Committed to success</span>
-                                <h1 data-animation="fadeInLeft" data-delay=".5s" >Business cloud transformation as a service</h1>
+                                <span data-animation="fadeInLeft" data-delay=".1s">Committed to your cloud success</span>
+                                <h1 data-animation="fadeInLeft" data-delay=".5s" >Business tranformation as a service</h1>
                                 <p data-animation="fadeInLeft" data-delay=".9s">Engage with us to embark on a journey to transform your business to the cloud<br>.</p>
                                 <!-- Hero-btn -->
                                 <div class="hero__btn" data-animation="fadeInLeft" data-delay="1.1s">
@@ -196,8 +196,8 @@
                             <span><h2>About Us </h2></span>
                         </div>
                         <div class="support-caption">
-                            <p class="pera-top">We are cloud IT consuting firm helping customers transform their business with and end to end deployment and implementation of you application in the cloud</p>
-                            <p class="mb-65">We lay the migration plan and execute on that plan to transform your business</p>
+                            <p class="pera-top">We are cloud IT consuting firm helping customers transform their business with a end to end deployment and implementation of you application in the cloud</p>
+                            <p class="mb-65">With countless migrations under our belt, we take the guess work out of this transition</p>
                             <a href="about.html" class="btn post-btn">More About Us</a>
                         </div>
                     </div>
