modified:   index.html

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Custom application development</a></h5>
-                            <p>We help design, develop custom applications in a language of your choice ( Python, C++, Java, node.js ) t0 name a few</p>
+                            <p>We help design, develop and deploy custom applications to the cloud in a language of your choice ( Python, C++, Java, node.js ) to name a few</p>
                         </div>
                     </div>
                 </div>
