modified:   contact.html 	modified:   index.html 	modified:   services.html

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                     <nav> 
                                         <ul id="navigation">                                                                                          
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About</a></li>
                                             <li><a href="services.html">Services</a></li>
+                                            <li><a href="about.html">About</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-cat text-center mb-50">
+                    <div class="single-cat text-center">
                         <div class="cat-icon">
                             <span class="flaticon-result"></span>
                         </div>
@@ -149,7 +149,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-cat text-center mb-50">
                         <div class="cat-icon">
-                            <span class="flaticon-team"></span>
+                            <span class="flaticon-result"></span>
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Staff Augmentation</a></h5>
